force-app/main/default/objects/Campaign_Budget__c/Campaign_Budget__c.object-meta.xml
<CustomObject>
    <label>Campaign Budget</label>
    <nameField>
        <displayFormat>CB-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Campaign Budget</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>