force-app/main/default/objects/Campaign_Budget__c/fields/Currency__c.field-meta.xml
<CustomField>
    <fullName>Currency__c</fullName>
    <formula>IF(
    OR(
        TEXT( Sales_Org__c)=&apos;3010&apos; ,
        TEXT( Sales_Org__c)=&apos;3020&apos;
    ),
    &apos;MXN&apos;,
    IF(
        OR(
            TEXT( Sales_Org__c)=&apos;5070&apos; ,
            TEXT( Sales_Org__c)=&apos;5130&apos;
        ),
        &apos;USD&apos;,
        &apos;&apos;
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Currency</label>
    <type>Text</type>
</CustomField>