force-app/main/default/objects/Campaign_Budget__c/fields/Residual_Amount__c.field-meta.xml
<CustomField>
    <fullName>Residual_Amount__c</fullName>
    <formula>Budgeted_Amount__c - Amount_Spent__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Annual Remainging Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>