force-app/main/default/objects/Campaign_Budget__c/fields/Sum_Month_Budget__c.field-meta.xml
<CustomField>
    <fullName>Sum_Month_Budget__c</fullName>
    <label>Sum Month Budget</label>
    <summarizedField>Monthly_Budget__c.Budgeted_Amount__c</summarizedField>
    <summaryForeignKey>Monthly_Budget__c.Campaign_Budget__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>