force-app/main/default/objects/Campaign_Budget__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Sales_Org__c</columns>
    <columns>Year__c</columns>
    <columns>Budgeted_Amount__c</columns>
    <columns>Amount_Spent__c</columns>
    <columns>Residual_Amount__c</columns>
    <columns>Currency__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>